updated dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -25,19 +25,19 @@
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active" href="dashboard.html">
-                            <i class="fas fa-tachometer-alt"></i>
+                            <i class="fas fa-fw fa-tachometer-alt"></i>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="profile.html">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-fw fa-id-card"></i>
                             <span>Data Diri</span>
                         </a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="daftar-baru.html">
-                            <i class="fas fa-user-plus"></i>
+                            <i class="fas fa-fw fa-user-plus"></i>
                             <span>Daftar Baru</span>
                         </a>
                     </li>
@@ -195,44 +195,42 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-12">
-                            <div class="card shadow card-border-left py-2">
+                            <div class="card shadow py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="" class="label-adm">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1">
-                                                2020010830
+                                            <div class="text-center text-dark mb-3">
+                                                <h3>LANGKAH PENDAFTARAN</h3>
                                             </div>
-
-                                            <label for="" class="label-adm">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1">
-                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
-                                            </div>
-
-                                            <label for="" class="label-adm">Status</label>
-                                            <div class="text-dark font-weight-bold mb-1">
-                                                <div>
-                                                    <span class=" badge-status">Silahkan memilih program studi.</span>
+                                            <div class="row text-dark text-center">
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_shared_workspace_hwky.png" alt=""
+                                                        height="100px">
+                                                    <h6 class="font-weight-bold">1. REGISTRASI ONLINE</h6>
                                                 </div>
-                                            </div>
-
-                                            <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-1">
-                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                16:37:36
-                                            </div>
-
-                                            <div class="row justify-content-between mt-2 px-2">
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-1 btn-admission-action">
-                                                        Pilih Program Studi
-                                                    </button>
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_fill_forms_yltj.png" alt=""
+                                                        height="100px">
+                                                    <h6 class="font-weight-bold">2. ISI & CETAK FORMULIR</h6>
                                                 </div>
-
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
-                                                        Batalkan Pendaftaran
-                                                    </button>
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_files1_9ool.png" alt="" height="100px">
+                                                    <h6 class="font-weight-bold">3. PENYERAHAN DOKUMEN</h6>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_online_information_4ui6.png" alt=""
+                                                        height="100px">
+                                                    <h6 class="font-weight-bold">4. TES SELEKSI & PENGUMUMAN</h6>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_payments_21w6.png" alt=""
+                                                        height="100px">
+                                                    <h6 class="font-weight-bold">5. DAFTAR ULANG</h6>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
+                                                    <img src="assets/img/undraw_my_documents_ym8x.png" alt=""
+                                                        height="100px">
+                                                    <h6 class="font-weight-bold">6. PENYERAHAN DOKUMEN DAFTAR</h6>
                                                 </div>
                                             </div>
                                         </div>
