updated dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,20 +86,20 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Daftar Pendaftaran</h3>
+                        <h4 class="text-dark mb-0 font-weight-bold">DAFTAR PENDAFTARAN</h4>
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
                             <a class="btn btn-add-admission" href="daftar-baru.html">
-                                <i class="fas fa-plus-circle fa-sm text-white-50"></i>&nbsp;Daftar Baru
+                                <i class="fas fa-fw fa-plus-circle fa-sm text-white-50"></i>&nbsp;DAFTAR BARU
                             </a>
                         </div>
                     </div>
 
                     <!-- CONTENT -->
-                    <div class="row mb-3">
-                        <div class="col-12">
-                            <div class="card shadow card-border-left py-2">
+                    <div class="mb-3">
+                        <div class="d-flex flex-row flex-nowrap card-over">
+                            <div class="card admission-card-item shadow card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -116,38 +116,29 @@
                                             <label for="" class="label-adm">Status</label>
                                             <div class="text-dark font-weight-bold mb-1">
                                                 <div>
-                                                    <span class=" badge-status">Silahkan memilih program studi.</span>
+                                                    <span class="badge-status">Silahkan memilih program
+                                                        studi.</span>
                                                 </div>
                                             </div>
 
                                             <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <div class="text-dark font-weight-bold mb-2">
                                                 <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
                                                 16:37:36
                                             </div>
 
-                                            <div class="row justify-content-between mt-2 px-2">
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-1 btn-admission-action">
-                                                        Pilih Program Studi
-                                                    </button>
-                                                </div>
+                                            <button class="btn btn-action-1 btn-admission-action mb-2">
+                                                PILIH PROGRAM STUDI
+                                            </button>
 
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
-                                                        Batalkan Pendaftaran
-                                                    </button>
-                                                </div>
-                                            </div>
+                                            <button class="btn btn-action-2 btn-admission-action">
+                                                BATALKAN PENDAFTARAN
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col-12">
-                            <div class="card shadow card-border-left py-2">
+                            <div class="card admission-card-item shadow card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -164,43 +155,116 @@
                                             <label for="" class="label-adm">Status</label>
                                             <div class="text-dark font-weight-bold mb-1">
                                                 <div>
-                                                    <span class=" badge-status">Silahkan memilih program studi.</span>
+                                                    <span class="badge-status">Silahkan memilih program
+                                                        studi.</span>
                                                 </div>
                                             </div>
 
                                             <label for="" class="label-adm">Tanggal Daftar</label>
-                                            <div class="text-dark font-weight-bold mb-1">
+                                            <div class="text-dark font-weight-bold mb-2">
                                                 <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
                                                 16:37:36
                                             </div>
 
-                                            <div class="row justify-content-between mt-2 px-2">
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-1 btn-admission-action">
-                                                        Pilih Program Studi
-                                                    </button>
-                                                </div>
+                                            <button class="btn btn-action-1 btn-admission-action mb-2">
+                                                PILIH PROGRAM STUDI
+                                            </button>
 
-                                                <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
-                                                        Batalkan Pendaftaran
-                                                    </button>
+                                            <button class="btn btn-action-2 btn-admission-action">
+                                                BATALKAN PENDAFTARAN
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><div class="card admission-card-item shadow card-border-left">
+                                <div class="card-body">
+                                    <div class="row align-items-center no-gutters">
+                                        <div class="col">
+                                            <label for="" class="label-adm">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                2020010830
+                                            </div>
+
+                                            <label for="" class="label-adm">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1">
+                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
+                                            </div>
+
+                                            <label for="" class="label-adm">Status</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <div>
+                                                    <span class="badge-status">Silahkan memilih program
+                                                        studi.</span>
                                                 </div>
                                             </div>
+
+                                            <label for="" class="label-adm">Tanggal Daftar</label>
+                                            <div class="text-dark font-weight-bold mb-2">
+                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                16:37:36
+                                            </div>
+
+                                            <button class="btn btn-action-1 btn-admission-action mb-2">
+                                                PILIH PROGRAM STUDI
+                                            </button>
+
+                                            <button class="btn btn-action-2 btn-admission-action">
+                                                BATALKAN PENDAFTARAN
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card admission-card-item shadow card-border-left">
+                                <div class="card-body">
+                                    <div class="row align-items-center no-gutters">
+                                        <div class="col">
+                                            <label for="" class="label-adm">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                2020010830
+                                            </div>
+
+                                            <label for="" class="label-adm">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1">
+                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
+                                            </div>
+
+                                            <label for="" class="label-adm">Status</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <div>
+                                                    <span class="badge-status">Silahkan memilih program
+                                                        studi.</span>
+                                                </div>
+                                            </div>
+
+                                            <label for="" class="label-adm">Tanggal Daftar</label>
+                                            <div class="text-dark font-weight-bold mb-2">
+                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                16:37:36
+                                            </div>
+
+                                            <button class="btn btn-action-1 btn-admission-action mb-2">
+                                                PILIH PROGRAM STUDI
+                                            </button>
+
+                                            <button class="btn btn-action-2 btn-admission-action">
+                                                BATALKAN PENDAFTARAN
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="row mb-3">
                         <div class="col-12">
                             <div class="card shadow py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <div class="text-center text-dark mb-3">
-                                                <h3>LANGKAH PENDAFTARAN</h3>
+                                            <div class="text-center text-dark mb-3 ">
+                                                <h4 class="">LANGKAH PENDAFTARAN</h4>
                                             </div>
                                             <div class="row text-dark text-center">
                                                 <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
