--- a/profile.html
+++ b/profile.html
@@ -26,19 +26,19 @@
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="dashboard.html">
-                            <i class="fas fa-tachometer-alt"></i>
+                            <i class="fas fa-fw fa-tachometer-alt"></i>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active" href="profile.html">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-fw fa-id-card"></i>
                             <span>Data Diri</span>
                         </a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="daftar-baru.html">
-                            <i class="fas fa-user-plus"></i>
+                            <i class="fas fa-fw fa-user-plus"></i>
                             <span>Daftar Baru</span>
                         </a>
                     </li>
