--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h4 class="text-dark mb-0 font-weight-bold">DAFTAR PENDAFTARAN</h4>
+                        <h4 class="text-dark mb-0 font-weight-bold headline">DAFTAR PENDAFTARAN</h4>
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
@@ -99,7 +99,7 @@
                     <!-- CONTENT -->
                     <div class="mb-3">
                         <div class="d-flex flex-row flex-nowrap card-over">
-                            <div class="card admission-card-item shadow card-border-left">
+                            <div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -138,7 +138,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card admission-card-item shadow card-border-left">
+                            <div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -176,7 +176,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><div class="card admission-card-item shadow card-border-left">
+                            </div><div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -215,7 +215,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card admission-card-item shadow card-border-left">
+                            <div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
@@ -264,7 +264,7 @@
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
                                             <div class="text-center text-dark mb-3 ">
-                                                <h4 class="">LANGKAH PENDAFTARAN</h4>
+                                                <h4 class="font-weight-bold headline">LANGKAH PENDAFTARAN</h4>
                                             </div>
                                             <div class="row text-dark text-center">
                                                 <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-2">
