--- a/profile.html
+++ b/profile.html
@@ -86,14 +86,14 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-4">Data Diri</h3>
+                    <h4 class="text-dark mb-4 headline">DATA DIRI</h4>
                     <div class="row mb-3">
                         <div class="col-12">
                             <div class="card mb-3">
                                 <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4"
                                         src="assets/img/avatar2.jpg" width="160" height="160">
                                     <div class="mb-3">
-                                        <button class="btn btn-bg-blue btn-sm" type="button">Ganti Foto</button>
+                                        <button class="btn btn-bg-blue btn-sm" type="button">GANTI FOTO</button>
                                     </div>
                                 </div>
                             </div>
@@ -103,13 +103,13 @@
                         <div class="container-fluid mb-3">
                             <ul id="rowTab" class="nav nav-tabs justify-content-center">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#data_diri" data-toggle="tab">Data Diri</a>
+                                    <a class="nav-link active" href="#data_diri" data-toggle="tab">DATA DIRI</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#data_orangtua" data-toggle="tab">Data Orang Tua</a>
+                                    <a class="nav-link" href="#data_orangtua" data-toggle="tab">DATA ORANG TUA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#data_sekolah" data-toggle="tab">Data Sekolah</a>
+                                    <a class="nav-link" href="#data_sekolah" data-toggle="tab">DATA SEKOLAH</a>
                                 </li>
                             </ul>
                         </div>
@@ -125,8 +125,8 @@
                                                     <form>
                                                         <div class="form-group">
                                                             <label for="fullname"><strong>Nama Lengkap</strong></label>
-                                                            <input class="form-control" type="text" name="fullname" 
-                                                            placeholder="Nama sesuai dengan akta kelahiran">
+                                                            <input class="form-control" type="text" name="fullname"
+                                                                placeholder="Nama sesuai dengan akta kelahiran">
                                                         </div>
 
                                                         <div class="form-group">
@@ -152,8 +152,8 @@
                                                         <div class="form-group">
                                                             <label for="birthplace"><strong>Tempat
                                                                     Lahir</strong></label>
-                                                            <input class="form-control" type="text" name="fullname" 
-                                                            placeholder="Tempat lahir sesuai dengan akta kelahiran">
+                                                            <input class="form-control" type="text" name="fullname"
+                                                                placeholder="Tempat lahir sesuai dengan akta kelahiran">
                                                         </div>
 
                                                         <div class="form-group">
@@ -242,8 +242,10 @@
                                                             <input class="form-control" type="text" name="fullname">
                                                         </div>
 
-                                                        <div class="form-group"><button class="btn btn-bg-blue btn-sm"
-                                                                type="submit">Simpan</button></div>
+                                                        <div class="form-group">
+                                                            <button class="btn btn-bg-blue btn-sm"
+                                                                type="submit">SIMPAN</button>
+                                                        </div>
                                                     </form>
                                                 </div>
                                             </div>
@@ -295,8 +297,8 @@
                                                             <label for="guardian-relation">
                                                                 <strong>Hubungan Wali dengan Calon Mahasiswa</strong>
                                                             </label>
-                                                            <input class="form-control" id="guardian-relation" type="text"
-                                                                name="guardian">
+                                                            <input class="form-control" id="guardian-relation"
+                                                                type="text" name="guardian">
                                                         </div>
 
                                                         <div class="form-group">
