updated headline and back button

--- a/jalur.html
+++ b/jalur.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Jalur</h3>
+                        <h4 class="text-dark headline mb-0">PILIH JALUR</h4>
                     </div>
                     <div class="row">
                         <div class="col-12">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <a href="tahun-akademik.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="tahun-akademik.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
