--- a/nilai.html
+++ b/nilai.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Nilai</h3>
+                        <h4 class="text-dark headline mb-0">NILAI</h4>
                     </div>
                     <div class="row">
                         <div class="col-12">
@@ -614,15 +614,15 @@
                     <div class="row mb-3">
                         <div class="col-12">
                             <div class="form-group">
-                                <button class="btn btn-bg-blue btn-sm" onclick="location.href='persyaratan.html'">Simpan
-                                    Data</button>
+                                <button class="btn btn-bg-blue btn-sm" onclick="location.href='persyaratan.html'">
+                                    SIMPAN DATA</button>
                             </div>
                         </div>
                     </div>
 
                     <div class="row mb-3">
                         <div class="col-12">
-                            <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="dashboard.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
