--- a/persyaratan.html
+++ b/persyaratan.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Informasi Persyaratan</h3>
+                        <h4 class="text-dark headline mb-0">INFORMASI PERSYARATAN</h4>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12">
@@ -143,7 +143,7 @@
                                                     <td class="text-center">
                                                         <a class="btn btn-bg-blue btn-sm" href="">
                                                             <i class="fa fa-download"></i>
-                                                            Download
+                                                            DOWNLOAD
                                                         </a>
                                                     </td>
                                                     <td class="text-center">
@@ -159,8 +159,8 @@
                                                         <i class="fa fa-times"></i>
                                                     </td>
                                                     <td class="text-center">
-                                                        <a class="btn btn-secondary btn-sm" href="">
-                                                            Pilih Jadwal
+                                                        <a class="btn btn-secondary btn-sm font-weight-bold" href="">
+                                                            PILIH JADWAL
                                                         </a>
                                                     </td>
                                                     <td class="text-center">
@@ -203,7 +203,7 @@
                                     <br>
                                     <a class="btn btn-bg-blue btn-sm" href="">
                                         <i class="fa fa-download"></i>
-                                        Download Kartu Peserta
+                                        DOWNLOAD KARTU PESERTA
                                     </a>
                                     <br>
                                     <br>
@@ -239,7 +239,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-12">
-                            <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="dashboard.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
