--- a/profile.html
+++ b/profile.html
@@ -360,7 +360,7 @@
 
 
                                                         <div class="form-group"><button class="btn btn-bg-blue btn-sm"
-                                                                type="submit">Simpan</button></div>
+                                                                type="submit">SIMPAN</button></div>
                                                     </form>
                                                 </div>
                                             </div>
@@ -456,7 +456,7 @@
 
                                                         <div class="form-group">
                                                             <button class="btn btn-bg-blue btn-sm"
-                                                                type="submit">Simpan</button>
+                                                                type="submit">SIMPAN</button>
                                                         </div>
                                                     </form>
                                                 </div>
