--- a/program-studi.html
+++ b/program-studi.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Program Studi</h3>
+                        <h4 class="text-dark headline mb-0">PILIH PROGRAM STUDI</h4>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
@@ -116,8 +116,8 @@
                                     </div>
 
                                     <div class="col-12 text-center mb-3">
-                                        <a id="btn-pilihan-2" class="btn btn-secondary btn-sm">
-                                            Tambah Pilihan 2</a>
+                                        <a id="btn-pilihan-2" class="btn btn-secondary btn-sm font-weight-bold">
+                                            TAMBAH PILIHAN 2</a>
                                     </div>
 
                                     <div id="prodi-pilihan-2" class="hidden">
@@ -151,13 +151,13 @@
                         <div class="col-12">
                             <div class="form-group">
                                 <button class="btn btn-bg-blue btn-sm"
-                                    onclick="location.href='nilai.html'">Submit</button>
+                                    onclick="location.href='nilai.html'">SUBMIT</button>
                             </div>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12">
-                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
