--- a/daftar-baru.html
+++ b/daftar-baru.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Strata Akademik</h3>
+                        <h4 class="text-dark headline mb-0">PILIH STRATA AKADEMIK</h4>
                     </div>
                     <div class="row">
                         <div class="col-12">
