--- a/jalur-tes.html
+++ b/jalur-tes.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Tes</h3>
+                        <h4 class="text-dark headline mb-0">PILIH TES</h4>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="jalur.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
