--- a/tahun-akademik.html
+++ b/tahun-akademik.html
@@ -86,7 +86,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Tahun Akademik</h3>
+                        <h4 class="text-dark headline mb-0">PILIH TAHUN AKADEMIK</h4>
                     </div>
                     <div class="row">
                         <div class="col-12">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">KEMBALI</a>
                         </div>
                     </div>
                 </div>
