updated nilai table

--- a/dashboard.html
+++ b/dashboard.html
@@ -176,7 +176,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><div class="card admission-card-item card-border-left">
+                            </div>
+                            <div class="card admission-card-item card-border-left">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
