--- a/daftar-baru.html
+++ b/daftar-baru.html
@@ -94,8 +94,8 @@
                                 <a href="tahun-akademik.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>D3 / S1</h4>
-                                        <h6 class="m-0">Diploma atau Sarjana</h6>
+                                        <h5 class="font-weight-bold">D3 / S1</h5>
+                                        <h6 class="m-0 font-weight-bold font-size-13">DIPLOMA ATAU SARJANA</h6>
                                     </div>
                                 </a>
                             </div>
@@ -105,8 +105,8 @@
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>S2</h4>
-                                        <h6 class="m-0">Magister</h6>
+                                        <h5 class="font-weight-bold">S2</h5>
+                                        <h6 class="m-0 font-weight-bold font-size-13">MAGISTER</h6>
                                     </div>
                                 </a>
                             </div>
