--- a/jalur-nontes.html
+++ b/jalur-nontes.html
@@ -89,72 +89,72 @@
                         <h4 class="text-dark headline mb-0">PILIH NON TES</h4>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="program-studi.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4 class="m-0">Beasiswa Akademik</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Beasiswa Akademik</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Non Akademik</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Beasiswa Non Akademik</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa OSC MEDCOM</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Beasiswa OSC MEDCOM</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Maranatha Peduli</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Beasiswa Maranatha Peduli</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Mitra Sekolah dan Gereja</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Beasiswa Mitra Sekolah dan Gereja</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Program Fast Track (Akselerasi)</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">Program Fast Track (Akselerasi)</h5>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                             <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">UTBK</h4>
+                                        <h5 class="m-0 font-weight-bold text-uppercase">UTBK</h5>
                                     </div>
                                 </a>
                             </div>
