--- a/jalur.html
+++ b/jalur.html
@@ -94,7 +94,7 @@
                                 <a href="jalur-nontes.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-scroll fa-3x mb-2"></i>
-                                        <h4 class="m-0">Jalur Non Tes</h4>
+                                        <h5 class="m-0 font-weight-bold">JALUR NON TES</h5>
                                     </div>
                                 </a>
                             </div>
@@ -104,7 +104,7 @@
                                 <a href="jalur-tes.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-desktop fa-3x mb-2"></i>
-                                        <h4 class="m-0">Jalur Tes</h4>
+                                        <h5 class="m-0 font-weight-bold">JALUR TES</h5>
                                     </div>
                                 </a>
                             </div>
