--- a/program-studi.html
+++ b/program-studi.html
@@ -116,7 +116,7 @@
                                     </div>
 
                                     <div class="col-12 text-center mb-3">
-                                        <a id="btn-pilihan-2" class="btn btn-secondary btn-sm font-weight-bold">
+                                        <a id="btn-pilihan-2" class="btn btn-secondary btn-sm font-weight-bold font-size-13">
                                             TAMBAH PILIHAN 2</a>
                                     </div>
 
