--- a/tahun-akademik.html
+++ b/tahun-akademik.html
@@ -94,8 +94,8 @@
                                 <a href="jalur.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x mb-2"></i>
-                                        <h4>Tahun Akademik 2021/2022</h4>
-                                        <h6>Angkatan 2021</h6>
+                                        <h5 class="font-weight-bold">TAHUN AKADEMIK 2021/2022</h5>
+                                        <h6 class="font-weight-bold font-size-13">ANGKATAN 2021</h6>
                                     </div>
                                 </a>
                             </div>
@@ -105,8 +105,8 @@
                                 <a href="jalur.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x mb-2"></i>
-                                        <h4>Tahun Akademik 2022/2023</h4>
-                                        <h6>Angkatan 2022</h6>
+                                        <h5 class="font-weight-bold">TAHUN AKADEMIK 2022/2023</h5>
+                                        <h6 class="font-weight-bold font-size-13">ANGKATAN 2022</h6>
                                     </div>
                                 </a>
                             </div>
