updated nilai table title

--- a/persyaratan.html
+++ b/persyaratan.html
@@ -96,7 +96,7 @@
                                         <div class="col">
                                             <label for="" class="label-adm">No Peserta</label>
                                             <div class="text-dark font-weight-bold mb-1">
-                                                <h4>2020010830</h4>
+                                                <h4 class="font-weight-bold">2020010830</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -109,8 +109,8 @@
                             <div class="card shadow">
                                 <div class="card-body">
                                     <div class="table-responsive">
-                                        <table class="table table-bordered">
-                                            <thead>
+                                        <table class="table table-bordered text-black">
+                                            <thead class="text-center">
                                                 <tr>
                                                     <th scope="col">Nama</th>
                                                     <th style="width: 5%;" scope="col">Status</th>
@@ -159,7 +159,7 @@
                                                         <i class="fa fa-times"></i>
                                                     </td>
                                                     <td class="text-center">
-                                                        <a class="btn btn-secondary btn-sm font-weight-bold" href="">
+                                                        <a class="btn btn-secondary btn-sm font-weight-bold font-size-13" href="">
                                                             PILIH JADWAL
                                                         </a>
                                                     </td>
