added sumbangan wajib form

--- a/program-studi.html
+++ b/program-studi.html
@@ -95,7 +95,7 @@
                                     <!-- <form> -->
                                     <div>
                                         <div class="form-group">
-                                            <label for="religion"><strong>Program Studi Pilihan 1</strong></label>
+                                            <label for="none"><strong>Program Studi Pilihan 1</strong></label>
                                             <select class="form-control" id="exampleFormControlSelect1">
                                                 <option>Program Studi S-1 Pendidikan Dokter</option>
                                                 <option>Program Studi S-1 Desain Komunikasi Visual</option>
@@ -103,8 +103,21 @@
                                             </select>
                                         </div>
 
+                                        <fieldset disabled>
+                                            <div class="form-group">
+                                                <label for="none"><strong>Sumbangan Wajib 1</strong></label>
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text" id="basic-addon1">Rp</span>
+                                                    </div>
+                                                    <input type="text" class="form-control"
+                                                        aria-describedby="basic-addon1" value="500.000">
+                                                </div>
+                                            </div>
+                                        </fieldset>
+
                                         <div class="form-group">
-                                            <label for="religion"><strong>Sumbangan Sukarela 1</strong></label>
+                                            <label for="none"><strong>Sumbangan Sukarela 1</strong></label>
                                             <div class="input-group">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text" id="basic-addon1">Rp</span>
@@ -116,13 +129,14 @@
                                     </div>
 
                                     <div class="col-12 text-center mb-3">
-                                        <a id="btn-pilihan-2" class="btn btn-secondary btn-sm font-weight-bold font-size-13">
+                                        <a id="btn-pilihan-2"
+                                            class="btn btn-secondary btn-sm font-weight-bold font-size-13">
                                             TAMBAH PILIHAN 2</a>
                                     </div>
 
                                     <div id="prodi-pilihan-2" class="hidden">
                                         <div class="form-group">
-                                            <label for="religion"><strong>Program Studi Pilihan 2</strong></label>
+                                            <label for="none"><strong>Program Studi Pilihan 2</strong></label>
                                             <select class="form-control" id="exampleFormControlSelect1">
                                                 <option>Program Studi S-1 Pendidikan Dokter</option>
                                                 <option>Program Studi S-1 Desain Komunikasi Visual</option>
@@ -130,8 +144,21 @@
                                             </select>
                                         </div>
 
+                                        <fieldset disabled>
+                                            <div class="form-group">
+                                                <label for="none"><strong>Sumbangan Wajib 2</strong></label>
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text" id="basic-addon1">Rp</span>
+                                                    </div>
+                                                    <input type="text" class="form-control"
+                                                        aria-describedby="basic-addon1" value="500.000">
+                                                </div>
+                                            </div>
+                                        </fieldset>
+
                                         <div class="form-group">
-                                            <label for="religion"><strong>Sumbangan Sukarela 2</strong></label>
+                                            <label for="none"><strong>Sumbangan Sukarela 2</strong></label>
                                             <div class="input-group">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text" id="basic-addon1">Rp</span>
